Use jvm open args in surefire explicitly